--- a/Proyecto_Juego/login/src/views/dashboard/alumno.ejs
+++ b/Proyecto_Juego/login/src/views/dashboard/alumno.ejs
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-   
+
     <section class="container">
         <div class="item header1">
             <h1></h1>
-            <ul> 
+            <ul>
                 <li>¿QUIEN</li>
                 <li>QUIERE</li>
                 <li>SER</li>
@@ -68,13 +68,38 @@
 
         <div class="item content">
             <div class="left">
-                <p>Alumno: <%= user.local.username %></p>
+                <p>Alumno: <%= user.local.username %>
+                </p>
             </div>
             <div class="right">
                 <p id="puntos">Puntos: 0</p>
             </div>
         </div>
+        <!-- Modal de fin de juego -->
+<div class="popup-container" id="gameOverModal" style="display: none;">
+    <div class="popup-box">
+        <h1>¡Juego Terminado!</h1>
+        <p id="puntajeFinal"></p>
+        <p id="resumenRespuestas"></p>
+        <div class="buttons">
+            <button onclick="window.location.reload()" class="close-btn">Jugar de nuevo</button>
+            <button onclick="window.location.href='/dashboard/alumno'" class="close-btn">Volver al Dashboard</button>
+        </div>
+    </div>
+</div>
+
+<!-- Indicadores de progreso -->
+<div class="item content">
+    <div class="left">
+        <p>Alumno: <%= user.local.username %></p>
+        <p class="pregunta">Pregunta: 0/12</p>
+    </div>
+    <div class="right">
+        <p id="puntos">Puntos: <%= user.puntos %></p>
+    </div>
+</div>
     </section>
     <script src="/js/script-juego.js"></script>
 </body>
+
 </html>
